更新文档和包配置，移除多余的可执行文件，简化使用说明

--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "Run commands through nvm-managed Node versions with zero shell boilerplate.",
   "bin": {
     "nvm-exec": "./bin/nvm-exec.js",
-    "node-exec": "./bin/nvm-exec.js",
-    "nvm-npx": "./bin/nvm-npx.js",
-    "npx-nvm": "./bin/nvm-npx.js"
+    "nvm-npx": "./bin/nvm-npx.js"
   },
   "files": [
     "bin",
