--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "nvm-exec",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "Run commands through nvm-managed Node versions with zero shell boilerplate.",
   "bin": {
-    "nvm-exec": "./bin/nvm-exec.js"
+    "nvm-exec": "./bin/nvm-exec.js",
+    "nvm-npx": "./bin/nvm-npx.js"
   },
   "files": [
     "bin",
